cabal-version:      3.0
name:               grammarian
version:            0.1.0.0
license:            MIT
license-file:       LICENSE
author:             Eduardo da Silveira
maintainer:         esilveira@inf.ufsm.br
build-type:         Simple
extra-doc-files:    CHANGELOG.md

common warnings
    ghc-options: -Wall

library parser
    import: warnings

    exposed-modules:
        Parser
        Grammar
        Lexer
        Runner

    build-depends:
        base ^>=4.17.2.1,
        array,
        mtl

    build-tool-depends: happy:happy

    hs-source-dirs: src

    default-language: Haskell2010

executable grammarian
    import:           warnings

    main-is:          Main.hs

    build-depends:
        base ^>=4.17.2.1,
        grammarian:parser

    hs-source-dirs:   app

    default-language: Haskell2010
